--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.jetbrains:annotations:20.1.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.immutables:value:2.8.2'
 	implementation 'org.immutables:value:2.8.2'
 	annotationProcessor 'org.immutables:value:2.8.2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 test {
