--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    implementation "org.springframework.boot:spring-boot-starter-jooq"
+    implementation "org.postgresql:postgresql:42.2.14"
     jooqGenerator 'org.postgresql:postgresql:42.2.14'
 
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
