--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
     implementation "org.springframework.boot:spring-boot-starter-webflux"
+
+    implementation 'com.deliveredtechnologies:rulebook-spring:0.12'
 }
 
 test {
