--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-webflux"
 
     implementation 'com.deliveredtechnologies:rulebook-spring:0.12'
+
+    implementation 'io.lettuce:lettuce-core:6.1.3.RELEASE'
 }
 
 test {
